tests/ui/feature-gates/feature-gate-link-arg-attribute.in_attr.stderr
error[E0658]: link kind `link-arg` is unstable
  --> $DIR/feature-gate-link-arg-attribute.rs:5:15
   |
LL | #[link(kind = "link-arg", name = "foo")]
   |               ^^^^^^^^^^
   |
   = note: see issue #99427 <https://github.com/rust-lang/rust/issues/99427> for more information
   = help: add `#![feature(link_arg_attribute)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
